current_build.txt
[DEBUG build_start] Build function started (session: A)
[DEBUG target_optimize_setup] Target and optimize options set (session: A)
[DEBUG build_complete] Build function completed successfully (session: A)
install
+- install nyon_game
   +- compile exe nyon_game Debug native 2 errors
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\Io\Writer.zig:1792:5: error: invalid format string 's' for type 'comptime_int'
    @compileError("invalid format string '" ++ fmt ++ "' for type '" ++ @typeName(@TypeOf(value)) ++ "'");
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
referenced by:
    printValue__anon_58483: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\Io\Writer.zig:1151:40
    print__anon_55309: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\Io\Writer.zig:703:25
    9 reference(s) hidden; use '-freference-trace=11' to see all references
src\game\sandbox.zig:451:106: error: expected type 'raylib_stub.Color', found 'type'
            engine.Shapes.drawCubeWires(center, BLOCK_SIZE + 0.02, BLOCK_SIZE + 0.02, BLOCK_SIZE + 0.02, COLOR_PREVIEW);
                                                                                                         ^~~~~~~~~~~~~
src\raylib_stub.zig:19:26: note: struct declared here
pub const Color = extern struct {
                  ~~~~~~~^~~~~~
src\raylib_stub.zig:324:93: note: parameter type declared here
pub extern fn drawCubeWires(position: Vector3, width: f32, height: f32, length: f32, color: Color) void;
                                                                                            ^~~~~
error: 2 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\zig.exe" build-exe -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\main.zig" "-Mraygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_game --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\lib\\" --listen=-

install
+- install nyon_editor
   +- compile exe nyon_editor Debug native 2 errors
src\editor\main_editor.zig:936:54: error: value of type 'bool' ignored
                    self.entity_to_scene_index.remove(data.entity);
                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~
src\editor\main_editor.zig:936:54: note: all non-void values must be used
src\editor\main_editor.zig:936:54: note: to discard the value, assign it to '_'
referenced by:
    update: src\editor\main_editor.zig:274:32
    main: src\editor.zig:55:26
    4 reference(s) hidden; use '-freference-trace=6' to see all references
src\editor\main_editor_tui.zig:233:26: error: member function expected 1 argument(s), found 0
        defer unknown_msg.deinit();
              ~~~~~~~~~~~^~~~~~~
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib\std\array_list.zig:624:13: note: function declared here
        pub fn deinit(self: *Self, gpa: Allocator) void {
        ~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error: 2 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\zig.exe" build-exe -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\editor.zig" "-Mraygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_editor --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\lib\\" --listen=-

Build Summary: 0/5 steps succeeded (2 failed)
install transitive failure
+- install nyon_game transitive failure
|  +- compile exe nyon_game Debug native 2 errors
+- install nyon_editor transitive failure
   +- compile exe nyon_editor Debug native 2 errors

error: the following build command failed with exit code 1:
.zig-cache\o\92f2af8c2753723feeadd90abb19e800\build.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\zig.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib C:\Users\donald\nyon-game .zig-cache C:\Users\donald\AppData\Local\zig --seed 0xa70677f -Zcf49dd5ef590b519
